--- a/src/main/resources/templates/employees/list.html
+++ b/src/main/resources/templates/employees/list.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div class="container mt-4">
+  <h1>Salary management system for the employees</h1>
+
   <!-- Employee Form -->
   <div class="card">
     <div class="card-header">Employee</div>
